# Projects-python

./: .gitignore  README.md  Temporizador.py
2026-python-foundations/extras-cryptography/caesar_cipher/: caesar_cipher_book.py  caesar_hacker_book.py  pyproject.toml
2026-python-foundations/extras-cryptography/caesar_cipher/src/caesar_cipher.egg-info/: SOURCES.txt
2026-python-foundations/extras-cryptography/caesarhacker/: pyproject.toml
2026-python-foundations/extras-cryptography/caesarhacker/src/caesarhacker/: hacker.py
2026-python-foundations/extras-cryptography/caesarhacker/src/caesarhacker.egg-info/: PKG-INFO
2026-python-foundations/extras-cryptography/rot13_cipher/: pyproject.toml  rot13_book.py
2026-python-foundations/extras-cryptography/rot13_cipher/src/rot13.egg-info/: PKG-INFO  SOURCES.txt
2026-python-foundations/extras-cryptography/substitution_cipher/: README.md  pyproject.toml  substitution_book.py
2026-python-foundations/extras-cryptography/substitution_cipher/src/substitution.egg-info/: PKG-INFO  SOURCES.txt
2026-python-foundations/extras-cryptography/vigenere_cipher/: pyproject.toml  vigenere_book.py
2026-python-foundations/extras-cryptography/vigenere_cipher/src/vigenere_cipher.egg-info/: PKG-INFO
2026-python-foundations/week1-basic-calculator/: pyproject.toml
2026-python-foundations/week1-basic-calculator/src/calculator/: __init__.py  operations.py
2026-python-foundations/week1-regex-log-cleaner/leetspeak/: pyproject.toml
2026-python-foundations/week1-regex-log-cleaner/leetspeak/src/leetspeak.egg-info/: SOURCES.txt  entry_points.txt
2026-python-foundations/week1-regex-log-cleaner/piglatin/: piglatin_book.py  pyproject.toml
2026-python-foundations/week2-file-projects/bagels/: pyproject.toml
2026-python-foundations/week2-file-projects/bagels/src/bagels.egg-info/: PKG-INFO  SOURCES.txt
2026-python-foundations/week2-file-projects/maze_runner/: maze_runner_book.py  pyproject.toml
2026-python-foundations/week2-file-projects/maze_runner/data/: laberinto1.txt
2026-python-foundations/week2-file-projects/maze_runner/src/maze_runner.egg-info/: PKG-INFO
2026-python-foundations/week3-cli-projects/factor_finder/: pyproject.toml
2026-python-foundations/week3-cli-projects/factor_finder/src/factor_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
2026-python-foundations/week4-data-serialization/periodic_table/: periodic_table_book.py  pyproject.toml
2026-python-foundations/week4-data-serialization/periodic_table/src/periodic_table.egg-info/: PKG-INFO  SOURCES.txt
2026-python-foundations/week5-scheduling-projects/progress_simulator/: pyproject.toml
2026-python-foundations/week5-scheduling-projects/progress_simulator/src/progress_simulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
2026-python-foundations/week7-api-projects/dice_roll/: pyproject.toml
2026-python-foundations/week7-api-projects/dice_roll/src/dice_roll.egg-info/: entry_points.txt  top_level.txt
2026-python-foundations/week7-api-projects/trick_questions/: README.md  pyproject.toml
2026-python-foundations/week7-api-projects/trick_questions/src/trick_questions.egg-info/: entry_points.txt
2026-python-foundations/week9-10-final-integration/sudoku_solver/: README.md  pyproject.toml  sudoku_solver_book.py
2026-python-foundations/week9-10-final-integration/sudoku_solver/data/: sudokupuzzles.txt
2026-python-foundations/week9-10-final-integration/sudoku_solver/src/sudoku_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
AutomatizarPDF/: convertidorpdf.py  plantilla.html
AutomatizarWord/: Automatizar-word.py  README.md  mi-info.docx  plantilla-mi-info.docx
Grabadoravoz/: LICENSE  README.md
Temporizador/: README.md
forest_fire_alert/: README.md  pyproject.toml
forest_fire_alert/src/forest_fire_alert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
personal-projects/: .gitignore
platform-engineering/: .gitignore  README.md
platform-engineering/2026-python-foundations/week1-regex-log-cleaner/spongecase/: pyproject.toml  spongecase_book.py
platform-engineering/2026-python-foundations/week1-regex-log-cleaner/spongecase/src/spongecase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
platform-engineering/2026-python-foundations/week3-cli-projects/forest_fire/: README.md  pyproject.toml
platform-engineering/2026-python-foundations/week3-cli-projects/forest_fire/src/forest_fire.egg-info/: PKG-INFO  SOURCES.txt
platform-engineering/2026-python-foundations/week3-cli-projects/million_dice_rolls/: pyproject.toml
platform-engineering/2026-python-foundations/week3-cli-projects/million_dice_rolls/src/million_dice_rolls.egg-info/: PKG-INFO  SOURCES.txt
platform-engineering/2026-python-foundations/week4-data-serialization/million_dice_rolls_json/: pyproject.toml
platform-engineering/2026-python-foundations/week4-data-serialization/million_dice_rolls_json/src/million_dice_rolls_json.egg-info/: PKG-INFO
platform-engineering/2026-python-foundations/week6-modeling-projects/forest_fire_corrected/: forest_fire_corrected.py  pyproject.toml
platform-engineering/2026-python-foundations/week6-modeling-projects/forest_fire_corrected/src/forest_fire_corrected.egg-info/: PKG-INFO  requires.txt  top_level.txt
platform-engineering/2026-python-foundations/week6-modeling-projects/game_of_life/: pyproject.toml
platform-engineering/2026-python-foundations/week6-modeling-projects/game_of_life/src/game_of_life.egg-info/: entry_points.txt
python-infrastructure-toolkit/: data_exporter.py  devops_toolkit.py  log_cleaner.py  monitorear_servicios.py  reporte.csv  reporte.json  servicio.py
sem-09-healt-check/: servicio.py
week-01-regex/: ejer.py  log_cleaner.py  parse_log_line.py  reporte-servicios.py  servicios.py
week-02/: cli_tool.py  config.txt  config_manager.py  guardar_config.py  leer_config.py  parsear_config.py
week-03-Files-JSON-CSV/: cli_tool.py  data_exporter.py  export_csv.py  import_json.py  reporte.csv  reporte.json
week-05-progress/: esperar.py  progress_simulator.py  timestamp.py
(+102 files in other folders)
