[project]
name = "forest_fire_alert"
version = "0.1.0"
description = "Forest Fire Simulator with Alerts and Logging"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
forest-fire-alert = "forest_fire_alert.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"