[project]
name = "week1-basic-calculator"
version = "0.1.0"
description = "Professional CLI Calculator for Platform Engineering"
readme = "README.md"
authors = [
    {name = "Hugo Nofre", email = "tu-email@ejemplo.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",        # Para CLI profesional
    "rich>=13.0.0",        # Output con colores y tablas
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",       # Testing
    "pytest-cov>=4.0.0",   # Coverage
    "black>=23.0.0",       # Formateo
    "flake8>=6.0.0",       # Linting
    "mypy>=1.0.0",         # Type checking
    "pre-commit>=3.0.0",   # Hooks de git
]

[project.urls]
Homepage = "https://github.com/tu-usuario/platform-engineering"
Repository = "https://github.com/tu-usuario/platform-engineering"

[project.scripts]
calculator = "calculator.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"