[project]
name = "caesar_cipher"
version = "0.1.0"
description = "Caesar Cipher - Encryption/Decryption tool"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
caesar = "caesar.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"