[project]
name = "caesarhacker"
version = "0.1.0"
description = "Caesar Hacker - Brute force decryption"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
caesarhack = "caesarhacker.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"