[project]
name = "substitution_cipher"
version = "0.1.0"
description = "Substitution Cipher - Letter substitution encryption"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
substitution = "substitution.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"