[project]
name = "vigenere_cipher"
version = "0.1.0"
description = "Vigenère Cipher - Polyalphabetic substitution cipher"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
vigenere = "vigenere.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"