[project]
name = "maze_runner"
version = "0.1.0"
description = "Maze Runner 2D - File reading practice"
readme = "README.md"
authors = [{name = "Hugo Nofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
maze = "maze_runner.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"