[project]
name = "factor_finder"
version = "0.1.0"
description = "Factor Finder - CLI tool to find factors of numbers"
readme = "README.md"
authors = [{name = "Hugo Nofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
factor-finder = "factor_finder.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"