[project]
name = "progress_simulator"
version = "0.1.0"
description = "Deployment Simulator with Progress Bar and Timer"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
simulate = "progress_simulator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"