[project]
name = "dice_roll"
version = "0.1.0"
description = "Dice Roll - CLI dice rolling simulator"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
dice-roll = "dice_roll.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"