[project]
name = "trick_questions"
version = "0.1.0"
description = "Trick Questions - Interactive quiz with API integration"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
trick-questions = "trick_questions.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"