[project]
name = "spongecase"
version = "0.1.0"
description = "sPoNgEcAsE converter for log obfuscation practice"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
spongecase = "spongecase.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
