[project]
name = "forest_fire_corrected"
version = "0.1.0"
description = "Forest Fire Simulator - Corrected version for system modeling"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "bext>=0.1.1",
]

[project.scripts]
forest-fire = "forest_fire.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"