[project]
name = "game_of_life"
version = "0.1.0"
description = "Conway's Game of Life - Cellular automata simulation"
readme = "README.md"
authors = [{name = "Hugo Onofre"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
game-of-life = "game_of_life.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"